--- a/src/main/webapp/mice.css
+++ b/src/main/webapp/mice.css
@@ -1,4 +1,4 @@
-.mouse, #preview{
+.mouse{
   position: absolute;
   background-repeat: no-repeat;
   height: 22px;
@@ -27,30 +27,10 @@ span.chat{
   float:right;
 }
 
-span.mouse img, span#preview img{
+span.mouse img{
   padding: 0 5px;
   float:left;
   margin: 0 -15px 0 15px;
   width: 20px;
   height: 20px;
-}
-
-
-form
-{  
-  margin: 0px 0px 0px -10px;
-  width:470px;
-}
-
-form#chat input{
-  width: 185px;
-  border:0;
-  padding:10px;
-  margin:10px;
-  -moz-border-radius:5px;
-  -moz-box-shadow:0 1px 0 #fff;
-  -webkit-border-radius:5px;
-  -webkit-box-shadow:0 1px 0 #fff;
-  border: 5px #bbb solid;
-  
 }
